simple cube setup

--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,11 @@
 <head>
 	<meta charset="utf8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-	<title>Icicles</title>
+	<title>WebGL Workshop</title>
 	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
 	<canvas id="c"></canvas>
-	<div id="overlay">
-		<div id="text">icicles</div>
-	</div>
 </body>
 <script src="libs/twgl-full.min.js"></script>
 <script src="scripts/utils/utils.js"></script>
