--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
 		<a target="_blank" href="https://webglfundamentals.org/">WebGL Fundamentals</a><br/>
 		<a target="_blank" href="https://twgljs.org/docs/">TWGL Docs</a><br/>
 		<a target="_blank" href="https://twgljs.org/#examples">TWGL Examples</a><br/>
+		<a target="_blank" href="https://thebookofshaders.com/">The Book of Shaders</a><br/>
+		<a target="_blank" href="https://www.getmosh.io/">MOSH filters</a><br/>
 		<br/>
 		<span id="debug"></span>
 		</div>
