--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 	<title>WebGL Workshop</title>
 	<link rel="stylesheet" type="text/css" href="style.css" />
+	<link rel="stylesheet" type="text/css" href="dat.gui.css" />
 </head>
 <body>
 	<canvas id="c"></canvas>
@@ -24,11 +25,13 @@
 </body>
 <script src="libs/twgl-full.min.js"></script>
 <script src="libs/audiostreamsource.min.js"></script>
+<script src="libs/dat.gui.min.js"></script>
 <script src="scripts/utils/utils.js"></script>
 <script src="scripts/utils/load.js"></script>
 <script src="scripts/utils/asset.js"></script>
 <script src="scripts/utils/text.js"></script>
 <script src="scripts/utils/mouse.js"></script>
+<script src="scripts/utils/gui.js"></script>
 <script src="scripts/utils/audioanalyser.js"></script>
 <script src="scripts/geometry/simple.js"></script>
 <script src="scripts/geometry/particles.js"></script>
